# diorb

./: COMPLETION_SUMMARY.md  Cargo.toml  README.md  debug_run.ps1  test_app.ps1  test_disk_io.rs  test_navigation.md  test_simple.rs
.kiro/specs/diorb-disk-benchmark/: design.md  requirements.md  tasks.md
src/: lib.rs  main.rs  main_debug.rs  simple.rs
src/app/: app.rs  mod.rs  state.rs  tui.rs
src/app/screens/: config.rs  history.rs  mod.rs  results.rs  running.rs  start.rs
src/bench/: mod.rs  random.rs  sequential.rs  worker.rs
src/config/: mod.rs  persistence.rs
src/io/: async_ops.rs  buffer.rs  disk.rs  integration_tests.rs  mod.rs
src/models/: mod.rs  result.rs
src/util/: mod.rs  units.rs
tests/: error_handling.rs  performance_integration.rs  start_screen_integration.rs
