[package]
name = "diorb"
version = "0.1.0"
edition = "2021"
description = "Cross-platform disk I/O benchmark tool with TUI"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
byte-unit = "5.0"
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
